UPDATED: Uodating CustomApplication and CustomTab metadata

--- a/config/.settings
+++ b/config/.settings
@@ -14,7 +14,11 @@
         "ApexTrigger",
         "AppMenu",
         "ApprovalProcess",
+        "CustomApplication",
+        "CustomApplicationComponent",
+        "CustomMetadata",
         "CustomObject",
+        "CustomTab",
         "HomePageComponent",
         "HomePageLayout",
         "Profile",
