--- a/src/package.xml
+++ b/src/package.xml
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>*</members>
-        <name>CustomApplication</name>
-    </types>
-    <types>
-        <members>Project__c</members>
-        <members>Test_Case__c</members>
-        <name>CustomObject</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>CustomTab</name>
-    </types>
-    <types>
-        <members>Project__c</members>
-        <members>Test_Case__c</members>
-        <name>SharingRules</name>
-    </types>
-    <version>36.0</version>
+	<types>
+		<members>*</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>CustomApplication</name>
+	</types>
+	<types>
+		<members>Project__c</members>
+		<members>Test_Case__c</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>CustomTab</name>
+	</types>
+	<types>
+		<members>Project__c</members>
+		<members>Test_Case__c</members>
+		<name>SharingRules</name>
+	</types>
+	<types>
+		<members>ProjectTileList</members>
+		<members>TestCaseListContainer</members>
+		<members>TestCaseItem</members>
+		<members>TestCaseForm</members>
+		<members>ProjectTile</members>
+		<members>prepareFormEvent</members>
+		<members>updateListTC</members>
+		<name>AuraDefinitionBundle</name>
+	</types>
+	<version>36.0</version>
 </Package>
